# lumina-rs

./: .clinerules
guide/: concept.md  guide.md
lumina-core/: Cargo.toml  README.md
lumina-core/resources/intent/: intent1.json  intent2.json  intent3.json  intent4.json  intent5.json  intent6.json
lumina-core/src/: analysis.rs  config.rs  export.rs  main.rs  shaders.rs
