[package]
name = "lumina-core"
version = "0.1.0"
edition = "2021"
description = "Context-aware GPU particle engine for lofi video overlays"

[dependencies]
wgpu = { version = "0.20", features = ["dx12", "vulkan-portability", "wgsl", "spirv"] }
winit = "0.30"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.29"
noise = "0.9"
bytemuck = { version = "1.21", features = ["derive", "extern_crate_alloc"] }
pollster = "0.4"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
